Fixing overflow h2 plans

--- a/css/queries.css
+++ b/css/queries.css
@@ -74,6 +74,8 @@
     .btn-store img { height:40px;}
     .plan-box li { padding: 0;}
     .small-icon { width: 30px;}
+
+    h2 { font-size: 2.5rem;}
 }
 
  /* size > 1023px = lg size */
